--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DB_CLIENT=sqlite3
 DB_FILENAME=./crm.db 
-require("dotenv").config();
-const dbPath = path.join(__dirname, process.env.DB_FILENAME || "crm.db");
+http = require('node:http');
+HOSTNAME=127.0.0.1
+PORT=3000 
+SECRETTOKEN = MY_SECRET_TOKEN
