--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_CLIENT=sqlite3
 DB_FILENAME=./crm.db 
 HOSTNAME=127.0.0.1
 PORT=3000 
-SECRETTOKEN = MY_SECRET_TOKEN
+JWT_SECRET = MY_SECRET_TOKEN
